--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "date-fns": "^2.29.3",
+    "file-saver": "^2.0.5",
     "rxjs": "~7.8.0",
     "swiper": "8.4",
     "tslib": "^2.3.0",
@@ -34,6 +35,7 @@
     "@angular-eslint/template-parser": "15.2.1",
     "@angular/cli": "~15.1.5",
     "@angular/compiler-cli": "^15.1.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "5.48.2",
     "@typescript-eslint/parser": "5.48.2",
